--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,11 @@ dependencies:
   carousel_slider: ^5.0.0
   dots_indicator: ^3.0.0
   font_awesome_flutter: ^10.8.0
-
+  hive_flutter: ^1.1.0
+  isar: ^3.1.0+1
+  firebase_core:
+  http:
+  fluttertoast:
 dev_dependencies:
   flutter_test:
     sdk: flutter
