--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   flutter_svg: ^2.0.5
   fl_chart: ^0.67.0
   google_maps_flutter: ^2.5.0
-  geocoding: ^2.1.1
   dropdown_button2: ^2.3.9
   image_picker_for_web: ^3.0.3
   image_picker: ^1.0.0
@@ -63,6 +62,10 @@ dependencies:
   http:
   fluttertoast:
   shimmer: ^3.0.0
+  file_picker: ^10.0.0
+  google_maps_flutter_web: ^0.5.5
+  geolocator: ^10.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
