--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,11 +60,12 @@ dependencies:
   isar: ^3.1.0+1
   firebase_core:
   http:
-  fluttertoast:
+#  fluttertoast:
   shimmer: ^3.0.0
   file_picker: ^10.0.0
   google_maps_flutter_web: ^0.5.5
   geolocator: ^10.1.0
+  permission_handler: ^12.0.0
 
 dev_dependencies:
   flutter_test:
