--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,9 +56,9 @@ dependencies:
   carousel_slider: ^5.0.0
   dots_indicator: ^3.0.0
   font_awesome_flutter: ^10.8.0
-  hive_flutter: ^1.1.0
+#  hive:
+#  hive_flutter:
   isar: ^3.1.0+1
-  firebase_core:
   http:
   #  fluttertoast:
   shimmer: ^3.0.0
@@ -66,6 +66,12 @@ dependencies:
   google_maps_flutter_web: ^0.5.5
   geolocator: ^10.1.0
   permission_handler:
+  firebase_core:
+  firebase_auth:
+  cloud_firestore:
+  shared_preferences: ^2.5.3
+  excel: ^4.0.6
+  archive:
 
 
 
